# bongo-penguin-cosmic

./: .gitignore  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: ci.yml
data/: com.github.bongopenguin.CosmicAppletBongoPenguin.desktop  io.github.yockerfx.CosmicAppletBongoPenguin.desktop  io.github.yockerfx.CosmicAppletBongoPenguin.metainfo.xml
debian/: changelog  control  copyright  install  postinst  postrm  rules
flatpak/: README.md  io.github.yockerfx.CosmicAppletBongoPenguin.json
src/: app.rs  lib.rs  main.rs  persistence.rs
src/input/: classify.rs  mod.rs  watcher.rs
