[package]
name = "cosmic-applet-bongo-penguin"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Bongo Penguin applet for the COSMIC desktop — reacts to keyboard and mouse input"
repository = "https://github.com/YockerFX/bongo-penguin-cosmic"

[[bin]]
name = "cosmic-applet-bongo-penguin"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
evdev = { version = "0.13", features = ["tokio"] }
aes-gcm = "0.10"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
