[package]
name = "cosmic-applet-bongo-penguin"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Bongo Penguin applet for the COSMIC desktop — reacts to keyboard and mouse input"
repository = "https://github.com/YockerFX/bongo-penguin-cosmic"

[[bin]]
name = "cosmic-applet-bongo-penguin"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
evdev = { version = "0.13", features = ["tokio"] }
aes-gcm = "0.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "YockerFX <104serious@gmail.com>"
copyright = "2026 YockerFX"
extended-description = """\
A Bongo-Cat-style applet for the COSMIC desktop environment (Pop!_OS), \
starring Tux the Linux penguin. The penguin sits in the COSMIC panel or \
dock and drums its flippers in response to every keystroke and mouse \
click — system-wide, including games under Proton, exclusive fullscreen, \
and native Wayland applications.

Includes a live keystroke counter that survives reboots, encrypted with \
AES-256-GCM and bound to the machine's /etc/machine-id so counts can't \
be trivially copied between installations."""
section = "x11"
priority = "optional"
depends = "$auto"
recommends = "cosmic-panel"
assets = [
    ["target/release/cosmic-applet-bongo-penguin", "usr/bin/", "755"],
    ["data/com.github.bongopenguin.CosmicAppletBongoPenguin.desktop", "usr/share/applications/", "644"],
]
maintainer-scripts = "debian/"
